# HomeGrownAI

./: README.md  main.py  pyproject.toml
src/backend/: server.py
src/backend/classes/: role.py  settings.py  user.py
src/homegrownai/backend/: server.py
src/homegrownai/backend/classes/: db.py  exceptions.py  role.py  settings.py  user.py
